# parking-ms

./: .gitignore  CMakeLists.txt  test.txt
cmake/: FindHyperLPR3.cmake
docs/: BUILD.md  USER_MANUAL.md
resources/: parking_ms.qrc  style.qss
scripts/: reset_camera.sh  run.sh  seed_demo.sql
sql/: schema.sql
src/: main.cpp
src/core/: ConfigManager.cpp  ConfigManager.h  DatabaseManager.cpp  DatabaseManager.h  Logger.cpp  Logger.h  Md5.cpp  Md5.h  Session.cpp  Session.h
src/models/: CarRecord.cpp  CarRecord.h  ParkingInfo.cpp  ParkingInfo.h  UserRow.cpp  UserRow.h
src/recognition/: CameraCapture.cpp  CameraCapture.h  PlateRecognizer.cpp  PlateRecognizer.h  PlateTypes.cpp  PlateTypes.h
src/services/: AccountService.cpp  AccountService.h  AuthService.cpp  AuthService.h  QueryService.cpp  QueryService.h  ReservationService.cpp  ReservationService.h  VehicleService.cpp  VehicleService.h
src/ui/: AccountDialog.cpp  AccountDialog.h  InitWizard.cpp  InitWizard.h  LoginWindow.cpp  LoginWindow.h  MainWindow.cpp  MainWindow.h  ManualPlateDialog.cpp  ManualPlateDialog.h  QueryDialog.cpp  QueryDialog.h  RegisterDialog.cpp  RegisterDialog.h  ResetPwdDialog.cpp  ResetPwdDialog.h  RoleSelectDialog.cpp  RoleSelectDialog.h  UserModeWindow.cpp  UserModeWindow.h
